data/derived/comb/progs/unify/prog4474.ml.out
Characters 0-5:
  0.232 mod 0.12;;
  ^^^^^
Error: This expression has type float but an expression was expected of type
         int
